k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
        - name: api
          image: jmacgyve/tpos2goldyrev:0.1
          ports:
            - containerPort: 7070
          readinessProbe:
            httpGet:
              path: /
              port: 7070
          resources:
            requests:
              cpu: 200m
              memory: 300Mi
            limits:
              cpu: 500m
              memory: 400Mi
