k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gcloud
  namespace: default
spec:
  selector:
    matchLabels:
      app: gcloud
  replicas: 1
  template:
    metadata:
      name: gcloud
      labels:
        app: gcloud
    spec:
      containers:
      - name: gcloud
        image: jmacgyve/tpos2goldyrev:0.1
