k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: gcloud
  name: gcloud
spec:
  ports:
    - name: gcloud
      port: 8080
      protocol: TCP
  selector:
    app: gcloud
  type: LoadBalancer
